--- a/TwitterDemo/TwitterDemo/Base.lproj/Main.storyboard
+++ b/TwitterDemo/TwitterDemo/Base.lproj/Main.storyboard
@@ -81,8 +81,9 @@
                                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MIv-T8-JgL">
+                                        <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MIv-T8-JgL">
                                             <rect key="frame" x="8" y="8" width="50" height="50"/>
+                                            <gestureRecognizers/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="50" id="7aC-cS-iWo"/>
                                                 <constraint firstAttribute="width" constant="50" id="EWc-4w-seU"/>
@@ -93,6 +94,9 @@
                                                     <integer key="value" value="8"/>
                                                 </userDefinedRuntimeAttribute>
                                             </userDefinedRuntimeAttributes>
+                                            <connections>
+                                                <outletCollection property="gestureRecognizers" destination="VeM-dj-fgy" appends="YES" id="30l-VK-XaD"/>
+                                            </connections>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="54h" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R6a-It-vet">
                                             <rect key="frame" x="265" y="8" width="18" height="11"/>
@@ -166,6 +170,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pVe-hS-z0a" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="VeM-dj-fgy">
+                    <connections>
+                        <segue destination="APF-qX-IFo" kind="show" id="dzS-92-vfS"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="952.5" y="1168.3098591549297"/>
         </scene>
@@ -601,8 +610,9 @@
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="160"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="70d-RS-h8g">
+                                                <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="70d-RS-h8g">
                                                     <rect key="frame" x="8" y="12" width="50" height="50"/>
+                                                    <gestureRecognizers/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="50" id="699-pa-M9B"/>
                                                         <constraint firstAttribute="width" constant="50" id="Pcd-w7-1SA"/>
@@ -613,6 +623,9 @@
                                                         </userDefinedRuntimeAttribute>
                                                         <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                                     </userDefinedRuntimeAttributes>
+                                                    <connections>
+                                                        <outletCollection property="gestureRecognizers" destination="GJM-S9-h6F" appends="YES" id="mMl-qC-WtK"/>
+                                                    </connections>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Siji Rachel Tom" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1OU-UM-VNB">
                                                     <rect key="frame" x="66" y="16" width="110.5" height="18"/>
@@ -800,6 +813,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="u4c-2W-0bL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="GJM-S9-h6F">
+                    <connections>
+                        <segue destination="APF-qX-IFo" kind="show" id="O5O-ZZ-v98"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="1920" y="1170"/>
         </scene>
@@ -922,6 +940,7 @@
             <objects>
                 <navigationController storyboardIdentifier="ProfileNavigationControllerID" automaticallyAdjustsScrollViewInsets="NO" id="RXT-F3-s1h" sceneMemberID="viewController">
                     <toolbarItems/>
+                    <navigationItem key="navigationItem" id="6SP-yn-rrQ"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="QhN-cb-xLC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -943,5 +962,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="PM6-tD-te9"/>
+        <segue reference="O5O-ZZ-v98"/>
     </inferredMetricsTieBreakers>
 </document>
