--- a/TwitterDemo/TwitterDemo/Base.lproj/Main.storyboard
+++ b/TwitterDemo/TwitterDemo/Base.lproj/Main.storyboard
@@ -202,7 +202,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="228"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8gx-MA-tVc">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8gx-MA-tVc">
                                                     <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="80" id="eN2-ar-HLe"/>
