A tap recognizer for each cell.

--- a/TwitterDemo/TwitterDemo/Base.lproj/Main.storyboard
+++ b/TwitterDemo/TwitterDemo/Base.lproj/Main.storyboard
@@ -94,9 +94,6 @@
                                                     <integer key="value" value="8"/>
                                                 </userDefinedRuntimeAttribute>
                                             </userDefinedRuntimeAttributes>
-                                            <connections>
-                                                <outletCollection property="gestureRecognizers" destination="VeM-dj-fgy" appends="YES" id="30l-VK-XaD"/>
-                                            </connections>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="54h" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R6a-It-vet">
                                             <rect key="frame" x="265" y="8" width="18" height="11"/>
@@ -167,14 +164,10 @@
                     <navigationItem key="navigationItem" title="Home" id="l0X-rs-G8r"/>
                     <connections>
                         <outlet property="tableView" destination="65V-e6-prK" id="Txg-1l-npZ"/>
+                        <segue destination="APF-qX-IFo" kind="show" identifier="HomeToProfileSegueID" id="Xvo-gN-gO5"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pVe-hS-z0a" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <tapGestureRecognizer id="VeM-dj-fgy">
-                    <connections>
-                        <segue destination="APF-qX-IFo" kind="show" id="dzS-92-vfS"/>
-                    </connections>
-                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="952.5" y="1168.3098591549297"/>
         </scene>
@@ -199,7 +192,7 @@
                                         <rect key="frame" x="0.0" y="28" width="320" height="228"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="NUS-iU-ELk" id="fQl-Ql-O90">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="228"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="227"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8gx-MA-tVc">
@@ -295,8 +288,8 @@
                                             <outlet property="followingCountLabel" destination="K7V-u0-JOd" id="JcS-nA-bib"/>
                                             <outlet property="headerImageView" destination="8gx-MA-tVc" id="4Vc-eY-RLv"/>
                                             <outlet property="profileImageView" destination="mxx-Db-J36" id="KNq-np-lPD"/>
-                                            <outlet property="screenNameLabel" destination="w3T-gQ-TWg" id="leJ-lW-LrS"/>
-                                            <outlet property="userNameLabel" destination="k8e-ge-XpZ" id="YbD-gC-RXc"/>
+                                            <outlet property="screenNameLabel" destination="k8e-ge-XpZ" id="ijC-CM-KHb"/>
+                                            <outlet property="userNameLabel" destination="w3T-gQ-TWg" id="NJr-Q1-bhz"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -835,7 +828,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" alwaysBounceVertical="YES" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="iMo-JR-DGB">
-                                <rect key="frame" x="16" y="40" width="288" height="160"/>
+                                <rect key="frame" x="16" y="84" width="288" height="160"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="160" id="rbi-yb-4W1"/>
@@ -962,8 +955,8 @@
         <image name="retweet_unfilled" width="16" height="16"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="Xvo-gN-gO5"/>
         <segue reference="1x6-bK-gyF"/>
-        <segue reference="dzS-92-vfS"/>
         <segue reference="PM6-tD-te9"/>
     </inferredMetricsTieBreakers>
 </document>
